--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Frameworks, Libraries, Utilities, Plug-ins.">
     
     
-    <link rel="preload" href="/assets/css/styles.9eccb2b6.css" as="style"><link rel="preload" href="/assets/js/app.9eccb2b6.js" as="script"><link rel="prefetch" href="/assets/css/1.styles.e07c698d.css"><link rel="prefetch" href="/assets/css/2.styles.a2bd3099.css"><link rel="prefetch" href="/assets/js/1.e07c698d.js"><link rel="prefetch" href="/assets/js/2.a2bd3099.js"><link rel="prefetch" href="/assets/js/3.e480b3b9.js"><link rel="prefetch" href="/assets/js/4.6452f8cd.js"><link rel="prefetch" href="/assets/js/5.162f06f3.js"><link rel="prefetch" href="/assets/js/6.42397fe5.js"><link rel="prefetch" href="/assets/js/7.55d65479.js"><link rel="prefetch" href="/assets/js/8.d370bd8f.js"><link rel="prefetch" href="/assets/js/9.148e7925.js">
-    <link rel="stylesheet" href="/assets/css/1.styles.e07c698d.css"><link rel="stylesheet" href="/assets/css/2.styles.a2bd3099.css"><link rel="stylesheet" href="/assets/css/styles.9eccb2b6.css">
+    <link rel="preload" href="/flup/assets/css/styles.0c631f47.css" as="style"><link rel="preload" href="/flup/assets/js/app.0c631f47.js" as="script"><link rel="prefetch" href="/flup/assets/css/1.styles.e07c698d.css"><link rel="prefetch" href="/flup/assets/css/2.styles.a2bd3099.css"><link rel="prefetch" href="/flup/assets/js/1.e07c698d.js"><link rel="prefetch" href="/flup/assets/js/2.a2bd3099.js"><link rel="prefetch" href="/flup/assets/js/3.e480b3b9.js"><link rel="prefetch" href="/flup/assets/js/4.6452f8cd.js"><link rel="prefetch" href="/flup/assets/js/5.162f06f3.js"><link rel="prefetch" href="/flup/assets/js/6.42397fe5.js"><link rel="prefetch" href="/flup/assets/js/7.55d65479.js"><link rel="prefetch" href="/flup/assets/js/8.d370bd8f.js"><link rel="prefetch" href="/flup/assets/js/9.148e7925.js">
+    <link rel="stylesheet" href="/flup/assets/css/1.styles.e07c698d.css"><link rel="stylesheet" href="/flup/assets/css/2.styles.a2bd3099.css"><link rel="stylesheet" href="/flup/assets/css/styles.0c631f47.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.9eccb2b6.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/flup/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/flup/assets/js/app.0c631f47.js" defer></script>
   </body>
 </html>
